welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: ';' expected but 'while' found.
	} while (Nieme < num)
          ^